# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-04-15 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cpg listen initialization at CloudI startup

2020-04-14 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cpg listen initialization at CloudI startup
    * Update backward-cpp

2020-04-13 Michael Truog   <mjtruog at protonmail dot com>

    * Improve hidden node status monitoring
    * Update cpg

2020-04-12 Michael Truog   <mjtruog at protonmail dot com>

    * Improve cpg scopes reset when CloudI Service API nodes_set
      changes the listen value
    * Fix listen value changes in cloudi_core_i_nodes
    * Update cpg

2020-04-11 Michael Truog   <mjtruog at protonmail dot com>

    * Log an error if a hidden node connection causes a node to
      receive service subscriptions without having listen set to all
      (error is logged on the receive node and
       the received service subscriptions are ignored)
    * Improve CloudI node monitoring
    * Update cpg

2020-04-10 Michael Truog   <mjtruog at protonmail dot com>

    * Fix node reconnect so the previous connection type
      (visible or hidden) is used for the reconnect attempt
    * Add connection to the CloudI Service API nodes_status output

2020-04-07 Michael Truog   <mjtruog at protonmail dot com>

    * Improve remote_console cloudi executable command

2020-04-06 Michael Truog   <mjtruog at protonmail dot com>

    * Ignore both visible and hidden nodetool nodes
      (used by the cloudi executable script)
    * Update cpg

2020-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API nodes_set listen value
      back with more validation
    * Fix remote_console cloudi executable command

2020-04-01 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_shell request handling
      (shell interpretation of exec was previously only
       evaluating the first command)
