@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2020-04-18 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix scheduling of internal service use of
+      recv_async and recv_asyncs with the service
+      configuration option duo_mode == true
+
 2020-04-15 Michael Truog   <mjtruog at protonmail dot com>
 
     * Improve cpg listen initialization at CloudI startup
